Refactored the sax parser